fixing google tag manager

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
     {{content-for "head-footer"}}
 
-    <!-- Google Tag Manager -->
+    <!-- Google Tag Manager
     <script>
 
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -25,17 +25,17 @@
       })(window,document,'script','dataLayer','GTM-M584M2R');
 
     </script>
-    <!-- End Google Tag Manager -->
+    End Google Tag Manager -->
 
 <meta name="google-site-verification" content="lIjoK2b1XxRW8LOr-zJg0tRcTiZcN5rSv4L9bT7-T8k" />
 
   </head>
   <body>
 
-    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript)
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M584M2R"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+     End Google Tag Manager (noscript) -->
 
     {{content-for "body"}}
 
