--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
 
     {{content-for "head-footer"}}
 
-    <!-- Google Tag Manager
-    <script>
+    <!-- Google Tag Manager -->
+    <!-- <script>
 
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -24,8 +24,8 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-M584M2R');
 
-    </script>
-    End Google Tag Manager -->
+    </script> -->
+    <!-- End Google Tag Manager -->
 
 <meta name="google-site-verification" content="lIjoK2b1XxRW8LOr-zJg0tRcTiZcN5rSv4L9bT7-T8k" />
 
@@ -39,7 +39,7 @@
 
     {{content-for "body"}}
 
-    <script>
+    <!-- <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -47,7 +47,7 @@
 
       ga('create', 'UA-93998293-1', 'auto');
       ga('send', 'pageview');
-    </script>
+    </script> -->
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/55-lab-web-front-end.js"></script>
