--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>55Lab.co - +Conexão +Compartilhamento +Networking</title>
     <meta name="description" content="">
+    <link rel="icon" href="{{rootURL}}assets/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
